# FcMobile

./: .gitignore  LICENSE  README.md  README.zh-CN.md  WORKFLOW.md  WORKFLOW.zh-CN.md  pyproject.toml  requirements.txt
K77/: edl.json
Mbappe/: edl.json
utils/: contact_sheet.py  cover.py  hl_ocr.py  hl_scan.py  intro.py  make_video.py  render_landscape.py  render_vertical.py
